--- a/templates/hospitalapp/home.html
+++ b/templates/hospitalapp/home.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="{% static 'hospitalapp/home.css' %}">
 <div class="container">
     <h1 class="h">Welcome To The Hospital Management System</h1>
-    
-
+</div>
+<div>
+    <img style="width: 500px;" src="{% static 'hospitalapp/image/hoss.jpg' %}" alt="image not found">
 </div>
 {% endblock %}
