--- a/templates/hospitalapp/base.html
+++ b/templates/hospitalapp/base.html
@@ -6,33 +6,53 @@
     <title>Hospital Management</title>
     <link rel="stylesheet" href="{% static 'hospitalapp/base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    
+    <style>
+        body{
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-primary bg-primary mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">HomePage</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                       
-                        {% if user.user_type == 'patient' %}
-                            <a class="navbar-brand" href="{% url 'createappoinment' %}">Create Appointment</a>
-                            <a class="navbar-brand" href="{% url 'patient_dashboard' %}">Patient Dashboard</a>
-                        {% elif user.user_type == 'doctor' %}
-                            <a class="navbar-brand" href="{% url 'doctor_dashboard' %}">Doctor Dashboard</a>
-                        {% else %}
-                            <a class="navbar-brand" href="{% url 'login' %}">Login</a>
-                        {% endif %}
-                            
-                            <a class="navbar-brand" href="{% url 'logout' %}">Logout</a>
-                        
+   <nav class="navbar navbar-expand-lg navbar-primary bg-primary mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white" href="{% url 'home' %}">HomePage</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                {% if user.is_authenticated %}
+                    {% if user.user_type == 'patient' %}
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'createappoinment' %}">Create Appointment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'patient_dashboard' %}">Patient Dashboard</a>
+                        </li>
+                    {% elif user.user_type == 'doctor' %}
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'doctor_dashboard' %}">Doctor Dashboard</a>
+                        </li>
+                    {% elif user.user_type == 'admin' %}
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'admin_dashboard' %}">Admin Dashboard</a>
+                        </li>
                     {% endif %}
-                </ul>
-            </div>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    {% if request.path == '/' %}
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'register' %}">Register</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+            </ul>
         </div>
-    </nav>
-     <p><b>Hello {{ user.username }}</b></p>
+    </div>
+</nav>
+     <p><h5>Hello {{ user.username }}</h5></p>
     <div class="container">
         {% if messages %}
             {% for message in messages %}
@@ -43,12 +63,8 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
-    
-
-    
-    
 <footer>
-    <p>&copy; 2025 Hospital Management System</p>
+    <p><b>&copy; 2025 Hospital Management System</b></p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
