--- a/templates/hospitalapp/login.html
+++ b/templates/hospitalapp/login.html
@@ -1,28 +1,35 @@
 {% extends 'hospitalapp/base.html' %}
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h3 class="mb-3">Login</h3>
-        <form method="post" action="">
+<div class="container mt-5">
+    <div class="card shadow-lg p-5 mx-auto" style="max-width: 500px; ">
+        <h3 class="text-center mb-4">Login</h3>
+    
+        <form method="POST" action="">
             {% csrf_token %}
+            
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" name="username" class="form-control" required>
             </div>
+
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" required>
             </div>
-            {% if error %}
-                <div class="alert alert-danger">{{ error }}</div>
-            {% endif %}
-            <button type="submit" class="btn btn-primary">Login</button><br>
-            <a href="{% url 'register' %}">Register</a>
+
+            
+
+            <button type="submit" class="btn btn-success w-100">Login</button>
+
+            <div class="mt-3 text-center">
+                <p>
+                    Don't have an account? <a href="{% url 'register' %}">Register here</a>
+                </p>
+                <p>
+                    <a href="{% url 'forgot_password' %}">Forgot Password?</a>
+                </p>
+            </div>
         </form>
-        <p class="mt-2">
-            <a href="{% url 'forgot_password' %}">Forgot Password</a>
-        </p>
     </div>
 </div>
 {% endblock %}
-
